[package]
name = "bevy_robomaster_simulator"
version = "0.1.0"
edition = "2024"
default-run = "bevy_robomaster_simulator"

[dependencies]
bevy = { version="0.17.2", features = ["dynamic_linking"] }
avian3d = "0.4"
bevy_gltf_animation = "0.3.0"
bevy-inspector-egui = "=0.35.0"
rand = "0.8"
ros2-client = "0.8.2"
serde = { version = "1.0.228", features = ["derive"] }
log4rs = "1.4.0"
futures = "0.3.31"
async-io = "2.6.0"
rustdds = "0.11.7"
